# mqtt2timescale

./: .gitignore  Cargo.toml  flake-tests.nix  flake.nix
.github/workflows/: flake-update.yml
migrations/: V1__initial.sql  V2__water_leak.sql  V3__drop_leakage.sql
src/: main.rs
