[package]
name = "mqtt2timescale"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bytes = "1.7.1"
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive", "env"] }
env_logger = "0.11.5"
log = "0.4.22"
postgres = "0.19.8"
rumqttc = "0.24.0"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
