[package]
name = "mqtt2timescale"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
bytes = "1.9.0"
chrono = "0.4.39"
clap = { version = "4.5.27", features = ["derive", "env"] }
env_logger = "0.11.6"
log = "0.4.25"
postgres = "0.19.9"
refinery = { version = "0.8.16", features = ["postgres"] }
rumqttc = "0.24.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
